--- a/src/Web/calendarinvitation.web/src/components/Modal.module.css
+++ b/src/Web/calendarinvitation.web/src/components/Modal.module.css
@@ -17,8 +17,10 @@
 }
 
 .modal {
-  width: 250px;
-  height: 170px;
+  min-width: 300px;
+  max-width: 700px;
+  min-height: 300px;
+  height: auto;
   background: white;
   color: white;
   z-index: 10;
@@ -55,12 +57,14 @@
   bottom: 2px;
   margin-bottom: 10px;
   width: 100%;
+  display: contents;
 }
 
 .actionsContainer {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding-bottom: 10px;
 }
 
 .closeBtn {
