Added update and delete event functionality to the UI and backend event service. Also fixed some obvious issues with UI - Updated command handlers for update and delete events - Fixed logic to update events - Fixed styling issues with UI - Fixed error handling for event details page - Fixed clock issue with daterangepicker - Fixed navigation and component refresh when updating and deleting events

--- a/src/Web/calendarinvitation.web/src/App.css
+++ b/src/Web/calendarinvitation.web/src/App.css
@@ -38,6 +38,70 @@
   z-index: 0;
 }
 
+.react-datetimerange-picker {
+  font-family: Arial, sans-serif;
+}
+
 .react-datetimerange-picker__wrapper {
-  border-radius: 5px !important;
+  border: 1px solid #ced4da;
+  border-radius: 5px;
+  width: 600px;
+}
+
+.react-datetimerange-picker__inputGroup {
+  padding: 5px;
+}
+
+.react-datetimerange-picker__inputGroup__input {
+  width: 30px;
+  height: 30px;
+  border: none;
+  outline: none;
+  text-align: center;
+}
+
+.react-datetimerange-picker__inputGroup__month
+{
+  min-width: 3.54em;
+}
+
+.react-datetimerange-picker__inputGroup__divider {
+  margin: 0 5px;
+}
+
+.react-datetimerange-picker__inputGroup__amPm {
+  width: 50px;
+}
+
+.react-datetimerange-picker__button {
+  width: 30px;
+  height: 30px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+.react-datetimerange-picker__button:hover {
+  background-color: #eee;
+}
+
+.react-calendar {
+  border: none;
+}
+
+.react-calendar__tile--active {
+  background-color: #333;
+  color: white;
+}
+
+.react-clock {
+  margin-top: 10px;
+}
+
+.react-clock__face {
+  stroke: #333;
+}
+
+.react-clock__hand--second {
+  stroke: #f00;
 }
